welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:17: error: not enough arguments for method setPos: (x$1: Int, x$2: Int)Unit.
Unspecified value parameters x$1, x$2.
  setPos()
        ^